--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#aboutUs">About Us</a></li>
         <!-- create a photo gallery and integerate facebook messenger-->
         <li><a href="#">Photo Gallery</a></li>
         <li><a href="#">Contact Us</a></li>
